Inserindo mensagem de sucesso ao salvar

--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8"/>
 <title>Cadastro de título</title>
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-static-top">
@@ -18,6 +19,11 @@
     </nav>
     
     <form class="form-horizontal" action="/titulos" method="POST">
+    
+     	<div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
+    		<span th:text="${mensagem}"></span>
+    	</div>
+    
     	<div class="panel panel-default">
     		<div class="panel-heading">
     			<h1 class="panel-title">Novo título</h1>
