--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -66,7 +66,7 @@
 			</div>
     	</div>
     </form>
-
+<script src="/js/jquery-2.2.0.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
