--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="LayoutPadrao">
 <head>
-<meta charset="UTF-8"/>
 <title>Cadastro de título</title>
-<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
 </head>
-<body>
-	<nav class="navbar navbar-inverse navbar-static-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img alt="AlgaWorks" src="/images/logo-algaworks.png" />
-                </a>
-            </div>
-        </div>
-    </nav>
-    
+ <section layout:fragment="conteudo">
     <form class="form-horizontal" action="/titulos" method="POST">
     
      	<div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
@@ -26,8 +15,11 @@
     
     	<div class="panel panel-default">
     		<div class="panel-heading">
-    			<h1 class="panel-title">Novo título</h1>
-    		</div>
+    			<div class="clearfix">
+					<h1 class="panel-title aw-titulo-panel">Novo título</h1>
+					<a class="btn btn-link aw-link-panel" href="/titulos">Voltar para Pesquisa</a>
+				</div>
+			</div>
     		
     		<div class="panel-body">
 				<div class="form-group">
@@ -66,7 +58,5 @@
 			</div>
     	</div>
     </form>
-<script src="/js/jquery-2.2.0.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-</body>
-</html>
+ </section>
+ </html>
