--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -7,11 +7,9 @@
 <title>Cadastro de título</title>
 </head>
  <section layout:fragment="conteudo">
-    <form class="form-horizontal" action="/titulos" method="POST">
+    <form class="form-horizontal" action="/titulos" method="POST" th:object="${titulo}">
     
-     	<div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
-    		<span th:text="${mensagem}"></span>
-    	</div>
+     	<div layout:include="Mensagem"/>
     
     	<div class="panel panel-default">
     		<div class="panel-heading">
@@ -22,22 +20,24 @@
 			</div>
     		
     		<div class="panel-body">
-				<div class="form-group">
+    		
+    			<input type="hidden" th:field="*{codigo}"/>
+				<div class="form-group" th:classappend="${#fields.hasErrors('descricao')} ? has-error">
 					<label for="descricao" class="col-sm-2 control-label">Descrição</label>
 					<div class="col-sm-4"> 
-						<input type="text" name="descricao" class="form-control" id="descricao"/>
+						<input type="text" th:field="*{descricao}"  class="form-control" id="descricao"/>
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group" th:classappend="${#fields.hasErrors('dataVencimento')} ? has-error">
 					<label for="dataVencimento" class="col-sm-2 control-label">Data de vencimento</label>
 					<div class="col-sm-2">  
-						<input type="text" class="form-control" name="dataVencimento"	id="dataVencimento" />
+						<input type="text" class="form-control" th:field="*{dataVencimento}" id="dataVencimento" />
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group" th:classappend="${#fields.hasErrors('valor')} ? has-error">
 					<label for="valor" class="col-sm-2 control-label">Valor</label>
 					<div class="col-sm-2">   
-						<input type="text" class="form-control" name="valor" id="valor"/>
+						<input type="text" class="form-control" th:field="*{valor}" id="valor"/>
 					</div>
 				</div>
 				<div class="form-group">
