--- a/src/main/resources/templates/LayoutPadrao.html
+++ b/src/main/resources/templates/LayoutPadrao.html
@@ -8,6 +8,7 @@
 	<title>Cobrança</title>
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker.standalone.min.css"/>
 </head>
 
 <body>
@@ -20,5 +21,10 @@
     
     <script src="/js/jquery-2.2.0.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/cobranca.js"></script>
+	<script src="/js/bootstrap-datepicker.min.js"></script>
+	<script src="/js/bootstrap-datepicker.pt-BR.min.js"></script>
+	<script src="/js/jquery.maskMoney.min.js"></script>
+	
  </body>
  </html>
