--- a/src/main/resources/templates/LayoutPadrao.html
+++ b/src/main/resources/templates/LayoutPadrao.html
@@ -5,10 +5,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<meta charset="UTF-8"/>
+	
+	<meta http-equiv="Content-type" content="text-html; charset=UTF-8"/>
+	<meta name="viewport" content="width=device-width"/>
+	
 	<title>Cobrança</title>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/styles.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker.standalone.min.css"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datepicker.standalone.min.css}"/>
 </head>
 
 <body>
@@ -19,12 +23,12 @@
     	<p>Conteúdo principal</p>
     </section>
     
-    <script src="/js/jquery-2.2.0.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/cobranca.js"></script>
-	<script src="/js/bootstrap-datepicker.min.js"></script>
-	<script src="/js/bootstrap-datepicker.pt-BR.min.js"></script>
-	<script src="/js/jquery.maskMoney.min.js"></script>
+    <script th:src="@{/js/jquery-2.2.0.min.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/cobranca.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.min.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.pt-BR.min.js}"></script>
+	<script th:src="@{/js/jquery.maskMoney.min.js}"></script>
 	
  </body>
  </html>
