--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -15,51 +15,75 @@
 		<div class="panel-heading">
 			<div class="clearfix">
 				<h1 class="panel-title aw-titulo-panel">Pesquisa de títulos</h1>
-				<a class="btn btn-link aw-link-panel" href="/titulos/novo">Novo título</a>
+				<a class="btn btn-link aw-link-panel" th:href="@{/titulos/novo}">Novo título</a>
 			</div>
 		</div>
 	 <div class="panel-body">
-	 	<table class="table table-bordered table-striped">
-	 		<thead>
-	 			<tr>
-	 				<th class="text-center col-md-1">#</th>
-	 				<th>Descrição</th>
-	 				<th class="text-center col-md-2">Data de vencimento</th>
-	 				<th class="text-right col-md-2">Valor</th>
-	 				<th class="text-center col-md-2">Status</th>
-	 				<th class="col-md-1"></th>
-	 			</tr>
-	 		</thead>
-	 		<tbody>
-	 			<tr th:each="titulo : ${titulos}">
-	 				<td class="text-center" th:text="${titulo.codigo}"></td>
-	 				<td th:text="${titulo.descricao}"></td>
-	 				<td class="text-center" th:text="${{titulo.dataVencimento}}"></td>
-	 				<td class="text-right" th:text="|R$ ${{titulo.valor}}|"></td>
-	 				<td class="text-center">
-	 					<span 
-	 						class="label"
- 							th:classappend="${titulo.pendente ? 'label-danger' : 'label-success'}" 
- 							th:text="${titulo.status.descricao}"></span>
-	 				</td>
-	 				<td class="text-center">
-	 					<a class="btn btn-link btn-xs" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}" title="Editar"
-	 						rel="tooltip" data-placement="top">
-	 						<span class="glyphicon glyphicon-pencil"></span>
-	 					</a>
-	 					<a class="btn btn-link btn-xs" data-toggle="modal" data-target="#confirmacaoExclusaoModal"
-	 					    title="Excluir"	rel="tooltip" data-placement="top"
-	 						th:attr="data-codigo=${titulo.codigo},data-descricao=${titulo.descricao}">
-	 						<span class="glyphicon glyphicon-remove"></span>
-	 					</a>
-	 				</td>
-	 			</tr>
-	 			
-	 			<tr>
-	 				<td colspan="6" th:if="${#lists.isEmpty(titulos)}">Nenhum título foi encontrado</td>
-	 			</tr>
-	 		</tbody>
-	 	</table>
+	 
+	 	<form method="GET" class="form-horizontal" th:action="@{/titulos}" th:object="${filtro}">
+	 		<div class="form-group">
+	 			<div class="col-sm-4">
+	 				<div class="input-group">
+	 					<input class="form-control" name="descricao" placeholder="Qual título você está procurando?" autofocus="autofocus"
+	 						th:field="*{descricao}"/>
+	 					<span class="input-group-btn">
+	 						<button type="submit" class="btn btn-default" >
+	 							<i class="glyphicon glyphicon-search"/>
+	 						</button>
+	 					</span>
+	 				</div>
+	 			</div>
+	 		</div>
+	 	</form>
+	    <div class="table-responsive">
+		 	<table class="table table-bordered table-striped">
+		 		<thead>
+		 			<tr>
+		 				<th class="text-center col-md-1">#</th>
+		 				<th>Descrição</th>
+		 				<th class="text-center col-md-2">Data de vencimento</th>
+		 				<th class="text-right col-md-2">Valor</th>
+		 				<th class="text-center col-md-2">Status</th>
+		 				<th class="col-md-1"></th>
+		 			</tr>
+		 		</thead>
+		 		<tbody>
+		 			<tr th:each="titulo : ${titulos}">
+		 				<td class="text-center" th:text="${titulo.codigo}"></td>
+		 				<td th:text="${titulo.descricao}"></td>
+		 				<td class="text-center" th:text="${{titulo.dataVencimento}}"></td>
+		 				<td class="text-right" th:text="|R$ ${{titulo.valor}}|"></td>
+		 				<td class="text-center" th:attr="data-role=${titulo.codigo}">
+		 					<span 
+		 						class="label"
+	 							th:classappend="${titulo.pendente ? 'label-danger' : 'label-success'}" 
+	 							th:text="${titulo.status.descricao}"></span>
+		 				</td>
+		 				<td class="text-center">
+		 					<a class="btn btn-link btn-xs" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}" title="Editar"
+		 						rel="tooltip" data-placement="top">
+		 						<span class="glyphicon glyphicon-pencil"></span>
+		 					</a>
+		 					<a class="btn btn-link btn-xs" data-toggle="modal" data-target="#confirmacaoExclusaoModal"
+		 					    title="Excluir"	rel="tooltip" data-placement="top"
+		 						th:attr="data-codigo=${titulo.codigo},data-descricao=${titulo.descricao}">
+		 						<span class="glyphicon glyphicon-remove"></span>
+		 					</a>
+							<a class="btn btn-link btn-xs js-atualizar-status"  title="Receber" rel="tooltip" data-placement="top"
+								th:attr="data-codigo=${titulo.codigo}"
+								th:if="${titulo.pendente}" th:href="@{/titulos/{codigo}/receber(codigo=${titulo.codigo})}">
+		 						<span class="glyphicon glyphicon-check"></span>
+		 					</a>
+		 					
+		 				</td>
+		 			</tr>
+		 			
+		 			<tr>
+		 				<td colspan="6" th:if="${#lists.isEmpty(titulos)}">Nenhum título foi encontrado</td>
+		 			</tr>
+		 		</tbody>
+		 	</table>
+	 	</div>
 	 </div>
 	 
 	 <div layout:include="DialogoConfirmacaoExclusao"></div>
